grammar/LPCParser.g4
parser grammar LPCParser;

options { tokenVocab=LPCLexer; }

// Parser rules
sourceFile
    :   (statement)* EOF
    ;

statement
    :   functionDef
    |   modifierSection
    |   variableDecl ';'
    |   structDef
    |   classDef
    |   macroInvoke SEMI?
    |   ifStatement
    |   whileStatement
    |   forStatement
    |   doWhileStatement
    |   foreachStatement
    |   switchStatement
    |   breakStatement
    |   continueStatement
    |   returnStatement
    |   inheritStatement
    |   includeStatement
    |   block
    |   exprStatement
    |   prototypeStatement
    |   ';'
    ;

functionDef
    :   MODIFIER* typeSpec? STAR* Identifier LPAREN parameterList? RPAREN block
    ;

modifierSection
    :   MODIFIER+ COLON
    ;

variableDecl
    :   MODIFIER* typeSpec variableDeclarator (',' variableDeclarator)*
    ;

variableDeclarator
    :   STAR* Identifier (ASSIGN assignmentExpression)?
    ;

parameterList
    :   parameter (COMMA parameter)*
    ;

parameter
    :   typeSpec REF? STAR* Identifier ELLIPSIS? parameterDefault?      // int ref a | int a
    |   typeSpec REF? STAR*                 // 仅类型，无参数名，用于函数原型
    |   REF typeSpec STAR* Identifier ELLIPSIS? parameterDefault?       // ref int a
    |   REF typeSpec STAR*                  // ref int
    |   REF STAR* Identifier ELLIPSIS? parameterDefault?                // ref a
    |   STAR* Identifier ELLIPSIS? parameterDefault?                    // a
    ;

parameterDefault
    :   COLON closureExpr
    ;

structDef
    :   KW_STRUCT Identifier LBRACE structMemberList? RBRACE
    ;

classDef
    :   KW_CLASS Identifier LBRACE structMemberList? RBRACE
    ;

structMemberList
    :   structMember+
    ;

structMember
    :   typeSpec STAR* Identifier ';'
    ;

typeSpec
    :   KW_INT
    |   KW_FLOAT
    |   KW_STRING
    |   KW_OBJECT
    |   KW_MIXED
    |   KW_MAPPING
    |   KW_FUNCTION
    |   KW_BUFFER
    |   KW_VOID
    |   KW_STRUCT
    |   KW_STRUCT Identifier
    |   KW_CLASS
    |   KW_CLASS Identifier  // 支持 class item 这样的语法
    |   KW_ARRAY
    |   KW_CLOSURE
    |   KW_TREE
    |   Identifier ('*')*
    ;

block
    :   LBRACE statement* RBRACE
    ;

exprStatement
    :   expression ';'
    ;

// === 表达式 ===
expression
    :   assignmentExpression (',' assignmentExpression)*
    ;

assignmentExpression
    :   conditionalExpression ( (ASSIGN | PLUS_ASSIGN | MINUS_ASSIGN | STAR_ASSIGN | DIV_ASSIGN | PERCENT_ASSIGN | BIT_OR_ASSIGN | BIT_AND_ASSIGN | BIT_XOR_ASSIGN | SHIFT_LEFT_ASSIGN | SHIFT_RIGHT_ASSIGN | NULLISH_ASSIGN | LOGICAL_OR_ASSIGN | LOGICAL_AND_ASSIGN) expression )?
    ;

conditionalExpression
    :   nullishExpression ( '?' expression ':' conditionalExpression )?
    ;

nullishExpression
    :   logicalOrExpression (NULLISH logicalOrExpression)*
    ;

logicalOrExpression
    :   logicalAndExpression (OR logicalAndExpression)*
    ;

logicalAndExpression
    :   bitwiseOrExpression (AND bitwiseOrExpression)*
    ;

bitwiseOrExpression
    :   bitwiseXorExpression (BIT_OR bitwiseXorExpression)*
    ;

bitwiseXorExpression
    :   bitwiseAndExpression (BIT_XOR bitwiseAndExpression)*
    ;

bitwiseAndExpression
    :   equalityExpression (BIT_AND equalityExpression)*
    ;

equalityExpression
    :   relationalExpression ( (EQ | NE) relationalExpression)*
    ;

relationalExpression
    :   shiftExpression ( (GT | LT | GE | LE) shiftExpression )*
    ;

shiftExpression
    :   additiveExpression ( (SHIFT_LEFT | SHIFT_RIGHT) additiveExpression )*
    ;

additiveExpression
    :   multiplicativeExpression ( (PLUS | MINUS) multiplicativeExpression )*
    ;

multiplicativeExpression
    :   unaryExpression ( (STAR | DIV | PERCENT) unaryExpression )*
    ;

unaryExpression
    :   (INC | DEC)? postfixExpression
    |   (PLUS | MINUS | NOT | BIT_NOT | STAR) unaryExpression
    |   CATCH LPAREN expression RPAREN
    |   CATCH block
    |   castExpression
    ;

castExpression
    :   LPAREN castType RPAREN unaryExpression
    ;

castType
    :   castBaseType STAR*
    ;

castBaseType
    :   KW_INT
    |   KW_FLOAT
    |   KW_STRING
    |   KW_OBJECT
    |   KW_MIXED
    |   KW_MAPPING
    |   KW_FUNCTION
    |   KW_BUFFER
    |   KW_VOID
    |   KW_STRUCT
    |   KW_STRUCT Identifier
    |   KW_CLASS
    |   KW_CLASS Identifier  // 支持 class item 这样的类型转换
    |   KW_ARRAY
    |   KW_CLOSURE
    |   KW_TREE
    ;

postfixExpression
    :   primary ( ( (ARROW | DOT | SCOPE) Identifier ( LPAREN argumentList? RPAREN )? )
                | ( LPAREN argumentList? RPAREN )
                | LBRACK sliceExpr RBRACK
                | INC
                | DEC
                )*
    ;

argumentList
    :   assignmentExpression (ELLIPSIS)? (COMMA assignmentExpression (ELLIPSIS)?)* (COMMA)?
    ;

primary
    :   SCOPE Identifier                              # scopeIdentifier
    |   KW_EFUN SCOPE Identifier                      # efunScopeIdentifier
    |   stringConcat                                  # stringConcatenation
    |   closureExpr                                   # closurePrimary
    |   mappingLiteral                                # mappingLiteralExpr
    |   arrayDelimiterLiteral                         # arrayDelimiterExpr
    |   newExpression                                 # newExpressionPrimary
    |   KW_FUNCTION LPAREN parameterList? RPAREN block      # anonFunction
    |   DOLLAR LPAREN expression RPAREN              # dollarCallExpr
    |   Identifier                                    # identifierPrimary
    |   PARAMETER_PLACEHOLDER                         # parameterPlaceholder
    |   INTEGER                                       # integerPrimary
    |   FLOAT                                         # floatPrimary
    |   STRING_LITERAL                                # stringPrimary
    |   CHAR_LITERAL                                  # charPrimary
    |   LPAREN LBRACE expressionList? RBRACE RPAREN               # arrayLiteral
    |   LPAREN expression RPAREN                            # parenExpr
    |   REF Identifier                                # refVariable
    ;

stringConcat
    :   concatItem+
    ;

concatItem
    :   STRING_LITERAL
    |   Identifier LPAREN argumentList? RPAREN
    |   Identifier
    ;

ifStatement
    :   IF LPAREN expression RPAREN statement (ELSE statement)?
    ;

whileStatement
    :   WHILE LPAREN expression RPAREN statement
    ;

doWhileStatement
    :   DO statement WHILE LPAREN expression RPAREN SEMI
    ;

forStatement
    :   FOR LPAREN forInit? SEMI expression? SEMI expressionList? RPAREN statement
    ;

forInit
    :   variableDecl
    |   expressionList
    ;

expressionList
    :   spreadElement (COMMA spreadElement)* (COMMA)?
    ;

spreadElement
    :   ELLIPSIS assignmentExpression    // ...array
    |   assignmentExpression             // normal element
    ;

foreachStatement
    :   FOREACH LPAREN foreachInit IN expression RPAREN statement
    ;

foreachInit
    :   foreachVar (',' foreachVar)?
    ;

foreachVar
    :   typeSpec REF? STAR* Identifier
    |   REF typeSpec STAR* Identifier
    |   REF STAR* Identifier
    |   STAR* Identifier
    ;

switchStatement
    :   SWITCH LPAREN expression RPAREN LBRACE switchSection* RBRACE
    ;

switchSection
    :   switchLabelWithColon statement* (switchLabelWithColon statement*)*
    ;

switchLabelWithColon
    :   CASE switchLabel COLON
    |   DEFAULT COLON
    ;

switchLabel
    :   expression (RANGE_OP expression?)?      // x, x..y, x..
    |   RANGE_OP expression                     // ..y
    ;

breakStatement : BREAK ';' ;
continueStatement : CONTINUE ';' ;
returnStatement : RETURN expression? SEMI ;

closureExpr
    : LPAREN COLON closureArgumentList? COLON RPAREN
    ;

closureArgumentList
    : closureArgument (COMMA closureArgument)* (COMMA)?
    ;

closureArgument
    : DOLLAR Identifier
    | DOLLAR LPAREN expression RPAREN
    | assignmentExpression ELLIPSIS?
    ;

inheritStatement : INHERIT expression SEMI ;

includeStatement : INCLUDE expression SEMI ;

macroInvoke : Identifier LPAREN argumentList? RPAREN ;

prototypeStatement : MODIFIER* typeSpec? STAR* Identifier LPAREN parameterList? RPAREN SEMI ;

mappingLiteral : LPAREN LBRACK mappingPairList? RBRACK RPAREN ;

mappingPairList : mappingPair (COMMA mappingPair)* (COMMA)? ;
mappingPair : expression COLON expression ;

newExpression
    :   KW_NEW LPAREN ( typeSpec | expression ) (COMMA structInitializerList)? RPAREN
    ;

structInitializerList
    :   structInitializer (COMMA structInitializer)*
    ;

structInitializer
    :   Identifier COLON expression
    ;

sliceExpr
    :   LT expression                               # tailIndexOnly
    |   expression RANGE_OP LT? expression?         # headRange
    |   RANGE_OP LT? expression?                    # openRange
    |   expression                                  # singleIndex
    |   LT expression RANGE_OP LT? expression?      # tailHeadRange
    ;

arrayDelimiterLiteral
    :   ARRAY_DELIMITER_START arrayDelimiterContent? ARRAY_DELIMITER_END
    ;

arrayDelimiterContent
    :   arrayDelimiterElement+
    ;

arrayDelimiterElement
    :   STRING_LITERAL
    |   INTEGER
    |   FLOAT
    |   CHAR_LITERAL
    |   Identifier
    ;
