src/antlr/LPCParser.ts
// Generated from grammar/LPCParser.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { LPCParserVisitor } from "./LPCParserVisitor";


export class LPCParser extends Parser {
	public static readonly INTEGER = 1;
	public static readonly FLOAT = 2;
	public static readonly CHAR_LITERAL = 3;
	public static readonly STRING_LITERAL = 4;
	public static readonly HEREDOC_START = 5;
	public static readonly ARRAY_DELIMITER_START = 6;
	public static readonly HEREDOC_END = 7;
	public static readonly ARRAY_DELIMITER_END = 8;
	public static readonly WS = 9;
	public static readonly LINE_COMMENT = 10;
	public static readonly BLOCK_COMMENT = 11;
	public static readonly DIRECTIVE = 12;
	public static readonly IF = 13;
	public static readonly ELSE = 14;
	public static readonly FOR = 15;
	public static readonly WHILE = 16;
	public static readonly DO = 17;
	public static readonly SWITCH = 18;
	public static readonly CASE = 19;
	public static readonly DEFAULT = 20;
	public static readonly BREAK = 21;
	public static readonly CONTINUE = 22;
	public static readonly RETURN = 23;
	public static readonly FOREACH = 24;
	public static readonly INHERIT = 25;
	public static readonly INCLUDE = 26;
	public static readonly CATCH = 27;
	public static readonly REF = 28;
	public static readonly IN = 29;
	public static readonly KW_INT = 30;
	public static readonly KW_FLOAT = 31;
	public static readonly KW_STRING = 32;
	public static readonly KW_OBJECT = 33;
	public static readonly KW_MIXED = 34;
	public static readonly KW_MAPPING = 35;
	public static readonly KW_FUNCTION = 36;
	public static readonly KW_BUFFER = 37;
	public static readonly KW_VOID = 38;
	public static readonly KW_STRUCT = 39;
	public static readonly KW_CLASS = 40;
	public static readonly KW_ARRAY = 41;
	public static readonly KW_CLOSURE = 42;
	public static readonly KW_TREE = 43;
	public static readonly KW_NEW = 44;
	public static readonly KW_EFUN = 45;
	public static readonly ELLIPSIS = 46;
	public static readonly RANGE_OP = 47;
	public static readonly ARROW = 48;
	public static readonly DOT = 49;
	public static readonly INC = 50;
	public static readonly DEC = 51;
	public static readonly SHIFT_LEFT_ASSIGN = 52;
	public static readonly SHIFT_RIGHT_ASSIGN = 53;
	public static readonly NULLISH_ASSIGN = 54;
	public static readonly LOGICAL_OR_ASSIGN = 55;
	public static readonly LOGICAL_AND_ASSIGN = 56;
	public static readonly PLUS_ASSIGN = 57;
	public static readonly MINUS_ASSIGN = 58;
	public static readonly STAR_ASSIGN = 59;
	public static readonly DIV_ASSIGN = 60;
	public static readonly PERCENT_ASSIGN = 61;
	public static readonly BIT_XOR_ASSIGN = 62;
	public static readonly PLUS = 63;
	public static readonly MINUS = 64;
	public static readonly STAR = 65;
	public static readonly DIV = 66;
	public static readonly PERCENT = 67;
	public static readonly SCOPE = 68;
	public static readonly SEMI = 69;
	public static readonly COMMA = 70;
	public static readonly LPAREN = 71;
	public static readonly RPAREN = 72;
	public static readonly LBRACE = 73;
	public static readonly RBRACE = 74;
	public static readonly LBRACK = 75;
	public static readonly RBRACK = 76;
	public static readonly NULLISH = 77;
	public static readonly QUESTION = 78;
	public static readonly COLON = 79;
	public static readonly DOLLAR = 80;
	public static readonly GT = 81;
	public static readonly LT = 82;
	public static readonly GE = 83;
	public static readonly LE = 84;
	public static readonly EQ = 85;
	public static readonly NE = 86;
	public static readonly ASSIGN = 87;
	public static readonly NOT = 88;
	public static readonly AND = 89;
	public static readonly OR = 90;
	public static readonly SHIFT_LEFT = 91;
	public static readonly SHIFT_RIGHT = 92;
	public static readonly BIT_AND = 93;
	public static readonly BIT_OR = 94;
	public static readonly BIT_XOR = 95;
	public static readonly BIT_NOT = 96;
	public static readonly BIT_OR_ASSIGN = 97;
	public static readonly BIT_AND_ASSIGN = 98;
	public static readonly MODIFIER = 99;
	public static readonly PARAMETER_PLACEHOLDER = 100;
	public static readonly Identifier = 101;
	public static readonly RULE_sourceFile = 0;
	public static readonly RULE_statement = 1;
	public static readonly RULE_functionDef = 2;
	public static readonly RULE_modifierSection = 3;
	public static readonly RULE_variableDecl = 4;
	public static readonly RULE_variableDeclarator = 5;
	public static readonly RULE_parameterList = 6;
	public static readonly RULE_parameter = 7;
	public static readonly RULE_parameterDefault = 8;
	public static readonly RULE_structDef = 9;
	public static readonly RULE_classDef = 10;
	public static readonly RULE_structMemberList = 11;
	public static readonly RULE_structMember = 12;
	public static readonly RULE_typeSpec = 13;
	public static readonly RULE_block = 14;
	public static readonly RULE_exprStatement = 15;
	public static readonly RULE_expression = 16;
	public static readonly RULE_assignmentExpression = 17;
	public static readonly RULE_conditionalExpression = 18;
	public static readonly RULE_nullishExpression = 19;
	public static readonly RULE_logicalOrExpression = 20;
	public static readonly RULE_logicalAndExpression = 21;
	public static readonly RULE_bitwiseOrExpression = 22;
	public static readonly RULE_bitwiseXorExpression = 23;
	public static readonly RULE_bitwiseAndExpression = 24;
	public static readonly RULE_equalityExpression = 25;
	public static readonly RULE_relationalExpression = 26;
	public static readonly RULE_shiftExpression = 27;
	public static readonly RULE_additiveExpression = 28;
	public static readonly RULE_multiplicativeExpression = 29;
	public static readonly RULE_unaryExpression = 30;
	public static readonly RULE_castExpression = 31;
	public static readonly RULE_castType = 32;
	public static readonly RULE_castBaseType = 33;
	public static readonly RULE_postfixExpression = 34;
	public static readonly RULE_argumentList = 35;
	public static readonly RULE_primary = 36;
	public static readonly RULE_stringConcat = 37;
	public static readonly RULE_concatItem = 38;
	public static readonly RULE_ifStatement = 39;
	public static readonly RULE_whileStatement = 40;
	public static readonly RULE_doWhileStatement = 41;
	public static readonly RULE_forStatement = 42;
	public static readonly RULE_forInit = 43;
	public static readonly RULE_expressionList = 44;
	public static readonly RULE_spreadElement = 45;
	public static readonly RULE_foreachStatement = 46;
	public static readonly RULE_foreachInit = 47;
	public static readonly RULE_foreachVar = 48;
	public static readonly RULE_switchStatement = 49;
	public static readonly RULE_switchSection = 50;
	public static readonly RULE_switchLabelWithColon = 51;
	public static readonly RULE_switchLabel = 52;
	public static readonly RULE_breakStatement = 53;
	public static readonly RULE_continueStatement = 54;
	public static readonly RULE_returnStatement = 55;
	public static readonly RULE_closureExpr = 56;
	public static readonly RULE_closureArgumentList = 57;
	public static readonly RULE_closureArgument = 58;
	public static readonly RULE_inheritStatement = 59;
	public static readonly RULE_includeStatement = 60;
	public static readonly RULE_macroInvoke = 61;
	public static readonly RULE_prototypeStatement = 62;
	public static readonly RULE_mappingLiteral = 63;
	public static readonly RULE_mappingPairList = 64;
	public static readonly RULE_mappingPair = 65;
	public static readonly RULE_newExpression = 66;
	public static readonly RULE_structInitializerList = 67;
	public static readonly RULE_structInitializer = 68;
	public static readonly RULE_sliceExpr = 69;
	public static readonly RULE_arrayDelimiterLiteral = 70;
	public static readonly RULE_arrayDelimiterContent = 71;
	public static readonly RULE_arrayDelimiterElement = 72;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"sourceFile", "statement", "functionDef", "modifierSection", "variableDecl", 
		"variableDeclarator", "parameterList", "parameter", "parameterDefault", 
		"structDef", "classDef", "structMemberList", "structMember", "typeSpec", 
		"block", "exprStatement", "expression", "assignmentExpression", "conditionalExpression", 
		"nullishExpression", "logicalOrExpression", "logicalAndExpression", "bitwiseOrExpression", 
		"bitwiseXorExpression", "bitwiseAndExpression", "equalityExpression", 
		"relationalExpression", "shiftExpression", "additiveExpression", "multiplicativeExpression", 
		"unaryExpression", "castExpression", "castType", "castBaseType", "postfixExpression", 
		"argumentList", "primary", "stringConcat", "concatItem", "ifStatement", 
		"whileStatement", "doWhileStatement", "forStatement", "forInit", "expressionList", 
		"spreadElement", "foreachStatement", "foreachInit", "foreachVar", "switchStatement", 
		"switchSection", "switchLabelWithColon", "switchLabel", "breakStatement", 
		"continueStatement", "returnStatement", "closureExpr", "closureArgumentList", 
		"closureArgument", "inheritStatement", "includeStatement", "macroInvoke", 
		"prototypeStatement", "mappingLiteral", "mappingPairList", "mappingPair", 
		"newExpression", "structInitializerList", "structInitializer", "sliceExpr", 
		"arrayDelimiterLiteral", "arrayDelimiterContent", "arrayDelimiterElement",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, "'if'", 
		"'else'", "'for'", "'while'", "'do'", "'switch'", "'case'", "'default'", 
		"'break'", "'continue'", "'return'", "'foreach'", "'inherit'", "'include'", 
		"'catch'", "'ref'", "'in'", "'int'", "'float'", "'string'", "'object'", 
		"'mixed'", "'mapping'", "'function'", "'buffer'", "'void'", "'struct'", 
		"'class'", "'array'", "'closure'", "'__TREE__'", "'new'", "'efun'", "'...'", 
		"'..'", "'->'", "'.'", "'++'", "'--'", "'<<='", "'>>='", "'??='", "'||='", 
		"'&&='", "'+='", "'-='", "'*='", "'/='", "'%='", "'^='", "'+'", "'-'", 
		"'*'", "'/'", "'%'", "'::'", "';'", "','", "'('", "')'", "'{'", "'}'", 
		"'['", "']'", "'??'", "'?'", "':'", "'$'", "'>'", "'<'", "'>='", "'<='", 
		"'=='", "'!='", "'='", "'!'", "'&&'", "'||'", "'<<'", "'>>'", "'&'", "'|'", 
		"'^'", "'~'", "'|='", "'&='",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "INTEGER", "FLOAT", "CHAR_LITERAL", "STRING_LITERAL", "HEREDOC_START", 
		"ARRAY_DELIMITER_START", "HEREDOC_END", "ARRAY_DELIMITER_END", "WS", "LINE_COMMENT", 
		"BLOCK_COMMENT", "DIRECTIVE", "IF", "ELSE", "FOR", "WHILE", "DO", "SWITCH", 
		"CASE", "DEFAULT", "BREAK", "CONTINUE", "RETURN", "FOREACH", "INHERIT", 
		"INCLUDE", "CATCH", "REF", "IN", "KW_INT", "KW_FLOAT", "KW_STRING", "KW_OBJECT", 
		"KW_MIXED", "KW_MAPPING", "KW_FUNCTION", "KW_BUFFER", "KW_VOID", "KW_STRUCT", 
		"KW_CLASS", "KW_ARRAY", "KW_CLOSURE", "KW_TREE", "KW_NEW", "KW_EFUN", 
		"ELLIPSIS", "RANGE_OP", "ARROW", "DOT", "INC", "DEC", "SHIFT_LEFT_ASSIGN", 
		"SHIFT_RIGHT_ASSIGN", "NULLISH_ASSIGN", "LOGICAL_OR_ASSIGN", "LOGICAL_AND_ASSIGN", 
		"PLUS_ASSIGN", "MINUS_ASSIGN", "STAR_ASSIGN", "DIV_ASSIGN", "PERCENT_ASSIGN", 
		"BIT_XOR_ASSIGN", "PLUS", "MINUS", "STAR", "DIV", "PERCENT", "SCOPE", 
		"SEMI", "COMMA", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", 
		"NULLISH", "QUESTION", "COLON", "DOLLAR", "GT", "LT", "GE", "LE", "EQ", 
		"NE", "ASSIGN", "NOT", "AND", "OR", "SHIFT_LEFT", "SHIFT_RIGHT", "BIT_AND", 
		"BIT_OR", "BIT_XOR", "BIT_NOT", "BIT_OR_ASSIGN", "BIT_AND_ASSIGN", "MODIFIER", 
		"PARAMETER_PLACEHOLDER", "Identifier",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(LPCParser._LITERAL_NAMES, LPCParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return LPCParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "LPCParser.g4"; }

	// @Override
	public get ruleNames(): string[] { return LPCParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return LPCParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(LPCParser._ATN, this);
	}
	// @RuleVersion(0)
	public sourceFile(): SourceFileContext {
		let _localctx: SourceFileContext = new SourceFileContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, LPCParser.RULE_sourceFile);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 149;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << LPCParser.INTEGER) | (1 << LPCParser.FLOAT) | (1 << LPCParser.CHAR_LITERAL) | (1 << LPCParser.STRING_LITERAL) | (1 << LPCParser.ARRAY_DELIMITER_START) | (1 << LPCParser.IF) | (1 << LPCParser.FOR) | (1 << LPCParser.WHILE) | (1 << LPCParser.DO) | (1 << LPCParser.SWITCH) | (1 << LPCParser.BREAK) | (1 << LPCParser.CONTINUE) | (1 << LPCParser.RETURN) | (1 << LPCParser.FOREACH) | (1 << LPCParser.INHERIT) | (1 << LPCParser.INCLUDE) | (1 << LPCParser.CATCH) | (1 << LPCParser.REF) | (1 << LPCParser.KW_INT) | (1 << LPCParser.KW_FLOAT))) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & ((1 << (LPCParser.KW_STRING - 32)) | (1 << (LPCParser.KW_OBJECT - 32)) | (1 << (LPCParser.KW_MIXED - 32)) | (1 << (LPCParser.KW_MAPPING - 32)) | (1 << (LPCParser.KW_FUNCTION - 32)) | (1 << (LPCParser.KW_BUFFER - 32)) | (1 << (LPCParser.KW_VOID - 32)) | (1 << (LPCParser.KW_STRUCT - 32)) | (1 << (LPCParser.KW_CLASS - 32)) | (1 << (LPCParser.KW_ARRAY - 32)) | (1 << (LPCParser.KW_CLOSURE - 32)) | (1 << (LPCParser.KW_TREE - 32)) | (1 << (LPCParser.KW_NEW - 32)) | (1 << (LPCParser.KW_EFUN - 32)) | (1 << (LPCParser.INC - 32)) | (1 << (LPCParser.DEC - 32)) | (1 << (LPCParser.PLUS - 32)))) !== 0) || ((((_la - 64)) & ~0x1F) === 0 && ((1 << (_la - 64)) & ((1 << (LPCParser.MINUS - 64)) | (1 << (LPCParser.STAR - 64)) | (1 << (LPCParser.SCOPE - 64)) | (1 << (LPCParser.SEMI - 64)) | (1 << (LPCParser.LPAREN - 64)) | (1 << (LPCParser.LBRACE - 64)) | (1 << (LPCParser.DOLLAR - 64)) | (1 << (LPCParser.NOT - 64)))) !== 0) || ((((_la - 96)) & ~0x1F) === 0 && ((1 << (_la - 96)) & ((1 << (LPCParser.BIT_NOT - 96)) | (1 << (LPCParser.MODIFIER - 96)) | (1 << (LPCParser.PARAMETER_PLACEHOLDER - 96)) | (1 << (LPCParser.Identifier - 96)))) !== 0)) {
				{
				{
				this.state = 146;
				this.statement();
				}
				}
				this.state = 151;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 152;
			this.match(LPCParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public statement(): StatementContext {
		let _localctx: StatementContext = new StatementContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, LPCParser.RULE_statement);
		try {
			this.state = 180;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 2, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 154;
				this.functionDef();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 155;
				this.modifierSection();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 156;
				this.variableDecl();
				this.state = 157;
				this.match(LPCParser.SEMI);
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 159;
				this.structDef();
				}
				break;

			case 5:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 160;
				this.classDef();
				}
				break;

			case 6:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 161;
				this.macroInvoke();
				this.state = 163;
				this._errHandler.sync(this);
				switch ( this.interpreter.adaptivePredict(this._input, 1, this._ctx) ) {
				case 1:
					{
					this.state = 162;
					this.match(LPCParser.SEMI);
					}
					break;
				}
				}
				break;

			case 7:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 165;
				this.ifStatement();
				}
				break;

			case 8:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 166;
				this.whileStatement();
				}
				break;

			case 9:
				this.enterOuterAlt(_localctx, 9);
				{
				this.state = 167;
				this.forStatement();
				}
				break;

			case 10:
				this.enterOuterAlt(_localctx, 10);
				{
				this.state = 168;
				this.doWhileStatement();
				}
				break;

			case 11:
				this.enterOuterAlt(_localctx, 11);
				{
				this.state = 169;
				this.foreachStatement();
				}
				break;

			case 12:
				this.enterOuterAlt(_localctx, 12);
				{
				this.state = 170;
				this.switchStatement();
				}
				break;

			case 13:
				this.enterOuterAlt(_localctx, 13);
				{
				this.state = 171;
				this.breakStatement();
				}
				break;

			case 14:
				this.enterOuterAlt(_localctx, 14);
				{
				this.state = 172;
				this.continueStatement();
				}
				break;

			case 15:
				this.enterOuterAlt(_localctx, 15);
				{
				this.state = 173;
				this.returnStatement();
				}
				break;

			case 16:
				this.enterOuterAlt(_localctx, 16);
				{
				this.state = 174;
				this.inheritStatement();
				}
				break;

			case 17:
				this.enterOuterAlt(_localctx, 17);
				{
				this.state = 175;
				this.includeStatement();
				}
				break;

			case 18:
				this.enterOuterAlt(_localctx, 18);
				{
				this.state = 176;
				this.block();
				}
				break;

			case 19:
				this.enterOuterAlt(_localctx, 19);
				{
				this.state = 177;
				this.exprStatement();
				}
				break;

			case 20:
				this.enterOuterAlt(_localctx, 20);
				{
				this.state = 178;
				this.prototypeStatement();
				}
				break;
